[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/bg/bg_castle_layer_1.png" type="Texture" id=1]
[ext_resource path="res://objects/backdrop/BdCastle.gd" type="Script" id=2]
[ext_resource path="res://music/bg_rain.ogg" type="AudioStream" id=3]
[ext_resource path="res://sprites/bg/bg_castle_layer_2.png" type="Texture" id=4]
[ext_resource path="res://sprites/bg/bg_castle_layer_3.png" type="Texture" id=5]

[sub_resource type="Animation" id=3]
resource_name = "thunder"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1e+06, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.282353, 0.419608, 0.615686, 0.752941 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 7

[sub_resource type="Animation" id=4]
resource_name = "scroll"
length = 60.0
loop = true
step = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("BgCloud:margin_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 60 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360 ]
}

[node name="BackdropCastle" type="Node2D"]
scale = Vector2( 1.5, 1.5 )
z_index = -20
z_as_relative = false
script = ExtResource( 2 )

[node name="ThunderTimer" type="Timer" parent="."]
one_shot = true

[node name="ThunderAnim" type="AnimationPlayer" parent="."]
anims/thunder = SubResource( 3 )

[node name="BgSky" type="TextureRect" parent="."]
margin_right = 360.0
margin_bottom = 200.0
texture = ExtResource( 5 )
stretch_mode = 2

[node name="BgCloud" type="TextureRect" parent="."]
margin_right = 800.0
margin_bottom = 200.0
texture = ExtResource( 4 )
stretch_mode = 2

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 200.0
color = Color( 1, 1, 1, 0 )

[node name="BgCastle" type="TextureRect" parent="."]
margin_right = 800.0
margin_bottom = 200.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="Rain" type="CPUParticles2D" parent="."]
position = Vector2( 200, -50 )
amount = 70
lifetime = 0.7
preprocess = 1.0
texture = SubResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 200, 1 )
direction = Vector2( -0.2, 1 )
spread = 3.0
gravity = Vector2( 0, 0 )
initial_velocity = 400.0
initial_velocity_random = 0.1
angle = 80.0

[node name="RainAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0
autoplay = true
bus = "Sound"

[node name="CloudScrollAnim" type="AnimationPlayer" parent="."]
autoplay = "scroll"
anims/scroll = SubResource( 4 )

[connection signal="timeout" from="ThunderTimer" to="." method="_on_ThunderTimer_timeout"]
